--- a/src/styles/usage/core/config.scss
+++ b/src/styles/usage/core/config.scss
@@ -6,3 +6,29 @@
  * variables中map使用“_”开头，本文件中不使用"_"
  * variables ⇌ config
  */
+ 
+ 
+@font-face {font-family: "iconfont";
+  src: url('/build/images/iconfont/iconfont.eot?t=1475157978'); /* IE9*/
+  src: url('/build/images/iconfont/iconfont.eot?t=1475157978#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('/build/images/iconfont/iconfont.woff?t=1475157978') format('woff'), /* chrome, firefox */
+  url('/build/images/iconfont/iconfont.ttf?t=1475157978') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('/build/images/iconfont/iconfont.svg?t=1475157978#iconfont') format('svg'); /* iOS 4.1- */
+}
+
+.iconfont {
+  font-family:"iconfont" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.icon-search:before { content: "\e65c"; }
+.icon-searchlist:before { content: "\e6fe"; }
+.icon-people:before { content: "\e736"; }
+.icon-cart:before { content: "\e6af"; }
+.icon-back:before { content: "\e679"; }
+.icon-sortlight:before { content: "\e7ad"; }
+.icon-home:before { content: "\e6b8"; }
+.icon-top:before { content: "\e69e"; }
