--- a/src/styles/usage/page/login.scss
+++ b/src/styles/usage/page/login.scss
@@ -30,6 +30,15 @@
 			}
 		}
 
+        .err{
+            font-size: 12px;
+            display: block;
+            height: .20rem;
+            color: #F55;
+            margin-top: -.1rem;
+            margin-bottom: .1rem;
+        }
+    
 		form{
 			.text{
 				height:.42rem;
@@ -195,12 +204,7 @@
 			margin-bottom:.1rem;
 		}
 		
-		.err{
-			font-size:12px;
-			color:#F55;
-			display:none;
-			margin-bottom:.1rem;
-		}
+		
 		.shoujihao{
 			height:.42rem;
 			border-radius:.03rem;
