--- a/src/styles/usage/module/m-foreverFlowers.scss
+++ b/src/styles/usage/module/m-foreverFlowers.scss
@@ -153,6 +153,10 @@
             &:nth-last-child(2) {
               padding-bottom: 10px;
             }
+            a{
+                color:#666;
+                font-size: 14px;
+            }
             span {
               width: 100%;
               display: block;
