--- a/src/styles/usage/page/app-cake.scss
+++ b/src/styles/usage/page/app-cake.scss
@@ -4,6 +4,7 @@
 @import "../../lib/fragment/yo-header";
 @import "../fragment/yo-list";
 @import "../element/yo-badge";
+@import "../common/common.scss";
 
 // 页面所需模块
 @import "../module/cake/cake.scss";
