--- a/src/styles/usage/common/common.scss
+++ b/src/styles/usage/common/common.scss
@@ -1,12 +1,163 @@
 @font-face {
     font-family: 'iconfont';
-    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    src:url('/build/images/iconfont/iconfont.woff') format('woff'),
     /* chrome、firefox */
-     url('/build/images/iconfont/iconfont.ttf') format('truetype');
+    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    src: url('/build/images/iconfont/iconfont.woff') format('woff'),url('/build/images/iconfont/iconfont.ttf') format('truetype');
 }
-
 .iconfont {
-  font-family: iconfont;
+    font-family: iconfont;
 }
 $baseColor: #ff6600;
+$headerbg: #ff6600;
+%header {
+    #header {
+        width: 100%;
+        height: 0.46rem;
+        background: $headerbg;
+        ul {
+            width: 100%;
+            height: 100%;
+            @include flexbox();
+            @include justify-content(flex-start);
+            padding-right: 0.1rem;
+            li {
+                line-height: 0.45rem;
+                &:first-child {
+                    width: 0.30rem;
+                    height: 0.30rem;
+                    i {
+                        font-size: 0.30rem;
+                        color: white;
+                    }
+                }
+                &:nth-child(2) {
+                    
+                    color: #fff;
+                    font-size: 0.12rem;
+                }
+                &:nth-child(3) {
+                    flex: 1;
+                    span {
+                        margin-top: 0.13rem;
+                        line-height: 0.10rem;
+                        height: 0.16rem;
+                        border: 1px solid #fff;
+                        font-size: 0.12rem;
+                        display: inline-block;
+                        color: #fff;
+                        border-radius: 0.02rem;
+                        padding: 0.02rem;
+                        i {
+                            display: inline-block;
+                            width: 0.15rem;
+                            height: 0.1rem;
+                            background: url('http://m.hua.com/images/icon2b.png') -95px -7px no-repeat;
+                            background-size: 198px 200px;
+                        }
+                    }
+                }
+                &:nth-child(4) {
+                    position: absolute;
+                    left: calc(45% - 0.17rem);
+                    font-size: 0.17rem;
+                    color: #fff;
+                }
+                &:last-child {
+                    width: 0.32rem;
+                    height: 0.32rem;
+                    i {
+                        font-size: 0.32rem;
+                        color: white;
+                    }
+                }
+            }
+        }
+    }
+    nav {
+        width: 100%;
+        height: 0.57rem;
+        background: #fff;
+        display: none;
+        ul {
+            height: 100%;
+            width: 100%;
+            @include flexbox($flexbox:flex) padding: 0.05rem;
+            li {
+                flex: 1;
+                span,
+                i {
+                    display: block;
+                    text-align: center;
+                    color: #666;
+                }
+                i {
+                    font-size: 13px;
+                    margin-top: -0.08rem;
+                }
+                span {
+                    font-size: 22px;
+                }
+            }
+        }
+    }
+}
+%totop {
+    .totop {
+        display: none;
+        width: 0.42rem;
+        height: 0.42rem;
+        background: rgba(255, 102, 0, 0.6);
+        border-radius: 50%;
+        position: absolute;
+        bottom: 70px;
+        right: 20px;
+        z-index: 9999;
+        a {
+            display: block;
+            margin: 0 auto;
+            height: 0.3rem;
+            width: 0.3rem;
+            background: url("http://m.hua.com/images/icon2b.png") -169px 6px no-repeat;
+            background-size: 200px 200px;
+        }
+    }
+}
+%footer {
+    footer {
+        padding: 0.1rem 0.1rem 0;
+        width: 100%;
+        .btns {
+            width: 100%;
+            a {
+                @include border($border-width: 2px, $border-color: #f60, $radius: 5px);
+                padding: 0.05rem 0.15rem;
+                color: #f60;
+            }
+        }
+        .footer_menu {
+            width: 100%;
+            padding: 0.1rem 0.3rem 0;
+            ul {
+                @include flexbox($flexbox:flex) flex-wrap: wrap;
+                justify-content: center;
+                li {
+                    border-right: 1px solid #666;
+                    padding: 0 0.1rem;
+                    text-align: center;
+                    &:nth-child(n+4) {
+                        border-right: none;
+                    }
+                    a {
+                        color: #666;
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
+        p {
+            color: #a3a3a3;
+            font-size: 12px;
+            text-align: center;
+        }
+    }
+}
