--- a/src/styles/usage/module/cake/cake.scss
+++ b/src/styles/usage/module/cake/cake.scss
@@ -1,25 +1,20 @@
-$headerbg:#ff6600;
-
 /* @font-face {font-family: 'iconfont';
     url:('./src/styles/usage/module/cake/iconfont.ttf') format('truetype');
    
 } */
-
-body {
+body { 
     font-family: 'microsoft yahei', Verdana, Arial, Helvetica, sans-serif;
 }
-
 @font-face {
     font-family: 'iconfont';
     src: url('/build/prd/styles/iconfont.eot');
     /* IE9*/
-    src: url('/build/prd/stylesiconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('/build/prd/styles/iconfont.woff') format('woff'), /* chrome、firefox */
-    url('/build/prd/styles/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('/build/prd/styles/iconfont.svg#iconfont') format('svg');
+    src:/* IE6-IE8 */
+    /* chrome、firefox */
+    /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('/build/prd/stylesiconfont.eot?#iefix') format('embedded-opentype'),url('/build/prd/styles/iconfont.woff') format('woff'),url('/build/prd/styles/iconfont.ttf') format('truetype'),url('/build/prd/styles/iconfont.svg#iconfont') format('svg');
     /* iOS 4.1- */
 }
-
 .iconfont {
     font-family: "iconfont" !important;
     font-size: 16px;
@@ -28,7 +23,6 @@ body {
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
 }
-
 .container {
     width: 100%;
     height: 100%;
@@ -37,98 +31,8 @@ body {
         width: 100%;
         height: 100%;
         #iscroll {
-            #header {
-                width: 100%;
-                height: 0.46rem;
-                background: $headerbg;
-                ul {
-                    width: 100%;
-                    height: 100%;
-                    @include flexbox($flexbox:flex)
-                    
-                    justify-content: flex-start;
-                    padding-right: 0.1rem;
-                    li {
-                        line-height: 0.45rem;
-                        &:first-child {
-                            width: 0.30rem;
-                            height: 0.30rem;
-                            i {
-                                font-size: 0.30rem;
-                                color: white;
-                            }
-                        }
-                        &:nth-child(2) {
-                            color: #fff;
-                            font-size: 0.12rem;
-                        }
-                        &:nth-child(3) {
-                            flex: 1;
-                            span {
-                                margin-top: 0.13rem;
-                                line-height: 0.10rem;
-                                height: 0.16rem;
-                                border: 1px solid #fff;
-                                font-size: 0.12rem;
-                                display: inline-block;
-                                color: #fff;
-                                border-radius: 0.02rem;
-                                padding: 0.02rem;
-                                i {
-                                    display: inline-block;
-                                    width: 0.15rem;
-                                    height: 0.1rem;
-                                    background: url('http://m.hua.com/images/icon2b.png') -95px -7px no-repeat;
-                                    ;
-                                    background-size: 198px 200px;
-                                }
-                            }
-                        }
-                        &:nth-child(4) {
-                            position: absolute;
-                            left: calc(50% - 0.17rem);
-                            font-size: 0.17rem;
-                            color: #fff;
-                        }
-                        &:last-child {
-                            width: 0.32rem;
-                            height: 0.32rem;
-                            i {
-                                font-size: 0.32rem;
-                                color: white;
-                            }
-                        }
-                    }
-                }
-            }
-            nav {
-                width: 100%;
-                height: 0.57rem;
-                background: #fff;
-                display: none;
-                ul {
-                    height: 100%;
-                    width: 100%;
-                    @include flexbox($flexbox:flex)
-                    padding: 0.05rem;
-                    li {
-                        flex: 1;
-                        span,
-                        i {
-                            display: block;
-                            text-align: center;
-                            color: #666;
-                        }
-                        i {
-                            font-size: 13px;
-                            margin-top: -0.08rem;
-                        }
-                        span {
-                            font-size: 22px;
-                        }
-                    }
-                }
-            }
+            @extend %header;
+            
             section.nav_bar {
                 height: 0.41rem;
                 width: 100%;
@@ -136,8 +40,7 @@ body {
                 ul {
                     width: 100%;
                     height: 100%;
-                    @include flexbox($flexbox:flex)
-                    justify-content: flex-start;
+                    @include flexbox($flexbox:flex) justify-content: flex-start;
                     li {
                         line-height: 0.4rem;
                         text-align: center;
@@ -175,8 +78,7 @@ body {
                         ol {
                             width: 100%;
                             padding: 0.1rem 0.1rem 0.15rem;
-                           @include flexbox($flexbox:flex)
-                            justify-content: space-between;
+                            @include flexbox($flexbox:flex) justify-content: space-between;
                             flex-wrap: wrap;
                             li {
                                 width: 1.45rem;
@@ -228,70 +130,16 @@ body {
                             }
                         }
                     }
-                }
+                }   
             }
-            footer {
-                padding: 0.1rem 0.1rem 0;
-                width: 100%;
-                .btns {
-                    width: 100%;
-                    a {
-                        @include border($border-width: 2px, $border-color: #f60, $radius: 5px);
-                        padding: 0.05rem 0.15rem;
-                        color: #f60;
-                    }
-                }
-                .footer_menu {
-                    width: 100%;
-                    padding: 0.1rem 0.3rem 0;
-                    ul {
-                        @include flexbox($flexbox:flex)
-                        flex-wrap: wrap;
-                        justify-content: center;
-                        li {
-                            border-right: 1px solid #666;
-                            padding: 0 0.1rem 0;
-                            text-align: center;
-                            &:nth-child(n+4) {
-                                border-right: none;
-                            }
-                            a {
-                                color: #666;
-                                font-size: 12px;
-                            }
-                        }
-                    }
-                }
-                p {
-                    color: #a3a3a3;
-                    font-size: 12px;
-                    text-align: center;
-                }
-            }
+            @extend %footer;
+            
         }
     }
-    .totop {
-        display: none;
-        width: 0.42rem;
-        height: 0.42rem;
-        background: rgba(255, 102, 0, 0.6);
-        border-radius: 50%;
-        position: absolute;
-        bottom: 70px;
-        right: 20px;
-        a {
-            display: block;
-            margin: 0 auto;
-            height: 0.3rem;
-            width: 0.3rem;
-            background: url("http://m.hua.com/images/icon2b.png") -169px 6px no-repeat;
-            background-size: 200px 200px;
-        }
-    }
+    @extend %totop;
 }
-
 .citys {
-	display: none;
+    display: none;
     width: 100%;
     height: 100%;
     padding: 0.5rem 0.2rem 0;
@@ -313,8 +161,8 @@ body {
         }
         .title {
             text-align: center;
-            height: .42rem;
-            line-height: .42rem;
+            height: 0.42rem;
+            line-height: 0.42rem;
             color: #E42B2B;
         }
         h4 {
@@ -347,27 +195,25 @@ body {
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
-
                 li {
                     width: 0.68rem;
                     height: 0.44rem;
                     line-height: 0.44rem;
-                    padding: 0 0.12rem 0;
+                    padding: 0 0.12rem;
                     text-align: center;
                     font-size: 14px;
-                    @include border($border-width: 0 0 2px 0,$border-color: #e5e5e5)
+                    @include border($border-width: 0 0 2px 0,$border-color: #e5e5e5);
                 }
             }
         }
     }
 }
-.loadmore{
-	display: block;
-	width: 90%;
-	margin: 0 auto;
-	text-align: center;
-	padding: 0.05rem 0;
-	color: #999;
-	@include border($border-width: 1px,$border-color: gray,$radius:5px);
-
+.loadmore {
+    display: block;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0.05rem 0;
+    color: #999;
+    @include border($border-width: 1px,$border-color: gray,$radius:5px);
 }
