--- a/src/styles/usage/module/m-index.scss
+++ b/src/styles/usage/module/m-index.scss
@@ -1,6 +1,7 @@
+body{
 .container {
     width: 100%;
-    height: 100%;
+    height: 100%; 
     overflow: hidden;
     .iscroll {
         @include flexbox();
@@ -438,4 +439,6 @@
             }
         }
     }
+}
+@extend %totop;
 }
